# ChineseCheckers

./: LICENSE  README.md
src/: Agent.cpp  Agent.h  CCTests.cpp  CMakeLists.txt  ChineseCheckersBoard.cpp  ChineseCheckersBoard.h  Eval.cpp  Eval.h  Minimax.cpp  Minimax.h  Move.cpp  Move.h  main.cpp  makefile  timer.h
src/agent/: CMakeLists.txt  main.cpp
src/gtest-1.7.0/: CMakeLists.txt
src/include/CCAgent/: Agent.h  AlphaBeta.h  CCBitboard.h  ChineseCheckersState.h  EndgameDatabase.h  EndgameDatabaseElement.h  LinearRegression.h  MCTS.h  Move.h  OpeningBook.h  Pairhash.h  SixCCS.h  TDRegression.h  UCB.h  uint128_t.h
src/lib/CCAgent/: Agent.cpp  AlphaBeta.cpp  CCBitboard.cpp  CMakeLists.txt  ChineseCheckersState.cpp  EndgameDatabase.cpp  LinearRegression.cpp  MCTS.cpp  Move.cpp  OpeningBook.cpp  SixCCS.cpp  TDRegression.cpp  UCB.cpp  uint128_t.cpp
src/lib/gflags/: CMakeLists.txt
src/tests/: CMakeLists.txt  test_agent.cpp  test_all.cpp  test_endgame.cpp  test_state.cpp  test_zobrist.cpp
